--- a/index.html
+++ b/index.html
@@ -11,12 +11,19 @@ description: "Melabit home page, based on the free Mundana theme for Jekyll deve
 
 {% if page.url == "/" %}
 
+
 <!-- Begin post excerpts, let's highlight the first 4 posts on top -->
 <h4 class="font-weight-bold spanborder"><span>Latest Posts</span></h4>
 <div class="row remove-site-content-margin">
 
+    {% if site.active_lang == site.default_lang %}
+        {% assign site_posts = site.posts | where: "lang", nil  %}
+    {% else %}
+        {% assign site_posts = site.posts | where: "lang", site.active_lang %}
+    {% endif %}
+        
     <!-- latest post -->
-    {% assign latest_post = site.posts[0] %}
+    {% assign latest_post = site_posts[0] %}
     <div class="col-md-6">
         <div class="card border-0 mb-4 box-shadow">   
             <a href="{{site.baseurl}}{{latest_post.url}}">
@@ -58,7 +65,7 @@ description: "Melabit home page, based on the free Mundana theme for Jekyll deve
 
     <div class="col-md-6">
         <!-- second latest post -->
-        {%- assign second_post = site.posts[1] -%}        
+        {%- assign second_post = site_posts[1] -%}        
         <div class="mb-3 d-flex align-items-center">                
                 {% if second_post.image %}
                 <div class="col-md-4">
@@ -85,7 +92,7 @@ description: "Melabit home page, based on the free Mundana theme for Jekyll deve
             </div>
 
         <!-- third latest post -->
-        {%- assign third_post = site.posts[2] -%}        
+        {%- assign third_post = site_posts[2] -%}        
         <div class="mb-3 d-flex align-items-center">                
                 {% if third_post.image %}
                 <div class="col-md-4">
@@ -112,7 +119,7 @@ description: "Melabit home page, based on the free Mundana theme for Jekyll deve
             </div>
         
         <!-- fourth latest post -->
-        {%- assign fourth_post = site.posts[3] -%}        
+        {%- assign fourth_post = site_posts[3] -%}        
         <div class="mb-3 d-flex align-items-center">                
                 {% if fourth_post.image %}
                 <div class="col-md-4">
@@ -144,7 +151,7 @@ description: "Melabit home page, based on the free Mundana theme for Jekyll deve
 
 
 <!-- Sticky - add sticky tag to the post you want to highlight here - tags: [sticky] -->
-{% for post in site.posts %} 
+{% for post in site_posts %} 
     {% if post.tags contains "sticky" %}
     <div class="jumbotron jumbotron-fluid jumbotron-home pt-0 pb-0 mt-3 mb-2rem bg-lightblue position-relative">
         <div class="pl-4 pr-0 h-100 tofront">
