--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@ description: "Melabit home page, based on the free Mundana theme for Jekyll deve
 
 <div class="container">
 
-{% if page.url == "/" %}
-
+{% if page.url == "/" or page.url == "/index.html" %}
 
 <!-- Begin post excerpts, let's highlight the first 4 posts on top -->
 <h4 class="font-weight-bold spanborder"><span>Latest Posts</span></h4>
