--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ description: "Melabit home page, based on the free Mundana theme for Jekyll deve
     <!-- latest post -->
     {% assign latest_post = site_posts[0] %}
     <div class="col-md-6">
-        <div class="card border-0 mb-4 box-shadow">   
+        <div class="card border-0 mb-4 box-shadow">
             <a href="{{site.baseurl}}{{latest_post.url}}">
             <div class="topfirstimage" style="background-image: url({% if latest_post.image contains "://" %}{{ latest_post.image }}{% else %} {{site.baseurl}}/{{ latest_post.image}}{% endif %}); height: 200px;    background-size: cover;    background-repeat: no-repeat;">
             </div>
@@ -223,7 +223,7 @@ description: "Melabit home page, based on the free Mundana theme for Jekyll deve
         
         <!-- Pagination -->
         <div class="mt-5">
-            {% if site.paginate %}
+            {% if site.pagination.enabled %}
                 {% include custom/paginator.html %}
             {%- endif %}
         </div>
