Swith default language from it to en

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ title: "Melabit home page"
 layout: default
 pagination:
     enabled: true
+    locale: "en"
 description: "Melabit home page, based on the free Mundana theme for Jekyll developed by Sal @wowthemesnet."
 ---
 
