--- a/index.html
+++ b/index.html
@@ -1,27 +1,34 @@
 ---
-title: "Melabit home page"
+title: "Mac and programming, with a touch of retrocomputing"
 layout: default
 pagination:
     enabled: true
-    locale: "en"
-description: "Melabit home page, based on the free Mundana theme for Jekyll developed by Sal @wowthemesnet."
+    locale: en
+    permalink: "/page:num/"
+description: "Melabit home page, based on the free Mundana theme for Jekyll."
 ---
 
 
 <div class="container">
 
+<!-- This test is not needed when using paginator-v2 to handle localization -->
+{% comment %}
 {% if page.url == "/" or page.url == "/index.html" %}
+...
+{% endif %}
+{% endcomment %}
+
 
 <!-- Begin post excerpts, let's highlight the first 4 posts on top -->
 <h4 class="font-weight-bold spanborder"><span>Latest Posts</span></h4>
 <div class="row remove-site-content-margin">
 
-    {% if site.active_lang == site.default_lang %}
-        {% assign site_posts = site.posts | where: "lang", nil  %}
+    {% if page.pagination.locale == "en" %}
+        {% assign site_posts = site.posts | where: "locale", "en"  %}
     {% else %}
-        {% assign site_posts = site.posts | where: "lang", site.active_lang %}
+        {% assign site_posts = site.posts | where: "locale", "it" %}
     {% endif %}
-        
+
     <!-- latest post -->
     {% assign latest_post = site_posts[0] %}
     <div class="col-md-6">
@@ -178,7 +185,11 @@ description: "Melabit home page, based on the free Mundana theme for Jekyll deve
     {% endif %}
 {% endfor %}
 
-{% endif %}     <!-- end: if page.url == "/" -->
+<!-- End: This test is not needed when using paginator-v2 to handle localization -->
+{% comment %}
+{% endif %}
+{% endcomment %}
+<!-- end: if page.url == "/" -->
 
 
 <!-- Now the rest of the posts with the usual loop but with an offset:4 on the first page so we can skeep the first 4 posts displayed above -->
