Start localization of all strings

--- a/index_it.html
+++ b/index_it.html
@@ -1,5 +1,5 @@
 ---
-title: "Mac e programmazione, con un tocco di retrocomputing"
+title: "Soprattutto Mac e programmazione, con un pizzico di retrocomputing"
 layout: default
 permalink: "/it/"
 pagination:
