--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: "Mac and programming, with a touch of retrocomputing"
+title: "Mostly Mac and coding, with a bit of retrocomputing"
 layout: default
 pagination:
     enabled: true
@@ -11,8 +11,11 @@ description: "Melabit home page, based on the free Mundana theme for Jekyll."
 
 <div class="container">
 
+{% assign ppl = page.pagination.locale %}
+{% assign strings = site.data.translations.strings[ppl] %}
+
 <!-- Begin post excerpts, let's highlight the first 4 posts on top -->
-<h4 class="font-weight-bold spanborder"><span>Latest Posts</span></h4>
+<h4 class="font-weight-bold spanborder"><span>{{strings.latest_posts}}</span></h4>
 <div class="row remove-site-content-margin">
 
     {% if page.pagination.locale == "en" %}
