Localize author list and bio

--- a/_pages/authors-list_it.html
+++ b/_pages/authors-list_it.html
@@ -1,8 +1,8 @@
 ---
-title: "Authors"
+title: "Authori"
 layout: default
-permalink: "/authors-list.html"
-locale: en
+permalink: "/it/authors-list.html"
+locale: it
 ---
 
 <!-- general way to assign locale according to specific page configuration -->
