Localization of categories work but still shows titles of unused categories

--- a/_pages/categories_it.html
+++ b/_pages/categories_it.html
@@ -1,8 +1,8 @@
 ---
 title: "Categories"
 layout: default
-permalink: "/categories.html"
-locale: en
+permalink: "/it/categories.html"
+locale: it
 ---
 
 <!-- general way to assign locale according to specific page configuration -->
