--- a/_pages/categories.html
+++ b/_pages/categories.html
@@ -20,19 +20,24 @@ locale: en
         <div class="col-md-8">
             <h1 class="font-weight-bold title h6 text-uppercase mb-4">{{ strings.categories }}</h1>
 
-            {% for category in site.categories %} 
-                <h4 class="font-weight-bold spanborder text-capitalize" id="{{ category[0] | downcase }}">
-                <span>{{ category[0] }}</span></h4>
-
+            {% for category in site.categories %}
                 {% assign pages_list = category[1] | where: "locale", loc %}
-                {% for post in pages_list %}
-                    {% if post.title != null %}
-                        {% if group == null or group == post.group %}
-                            {% include main-loop-card.html %}
-                        {% endif %}
-                    {% endif %}
-                {% endfor %}
+
+                {% assign len = pages_list | size %}
                 
+                {% if len > 0 %}
+                    <h4 class="font-weight-bold spanborder text-capitalize" id="{{ category[0] | downcase }}">
+                    <span>{{ category[0] }}</span></h4>
+
+                    {% for post in pages_list %}
+                        {% if post.title != null %}
+                            {% if group == null or group == post.group %}
+                                {% include main-loop-card.html %}
+                            {% endif %}
+                        {% endif %}
+                    {% endfor %}
+                {% endif %}
+
                 {% assign pages_list = nil %}
                 {% assign group = nil %}
             {% endfor %}
@@ -40,7 +45,7 @@ locale: en
         </div>
 
         <div class="col-md-4">
-            {% include sidebar-featured.html %}    
+            {% include sidebar-featured.html loc = loc %}
         </div>
 
     </div>
