--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ description: "Melabit home page, based on the free Mundana theme for Jekyll."
     </div>
 
     <div class="col-md-4">
-        {% include sidebar-featured.html %}    
+        {% include sidebar-featured.html loc = loc %}
     </div>
 </div>
 
