--- a/index.html
+++ b/index.html
@@ -19,17 +19,13 @@ description: "Melabit home page, based on the free Mundana theme for Jekyll."
 
 {% assign strings = site.data.translations.strings[loc] %}
 
+<!-- choose only posts having the right locale -->
+{% assign site_posts = site.posts | where: "locale", loc  %}
+
 
 <!-- Begin post excerpts, let's highlight the first 4 posts on top -->
 <h4 class="font-weight-bold spanborder"><span>{{ strings.latest_posts }}</span></h4>
 <div class="row remove-site-content-margin">
-
-    <!-- {% if loc == site.default_locale %} -->
-        {% assign site_posts = site.posts | where: "locale", loc  %}
-    <!-- {% else %}
-        {% assign site_posts = site.posts | where: "locale", loc %}
-    {% endif %} -->
-
 
     <!-- latest post -->
     {% assign latest_post = site_posts[0] %}
