--- a/index.html
+++ b/index.html
@@ -23,12 +23,27 @@ description: "Melabit home page, based on the free Mundana theme for Jekyll."
 {% assign site_posts = site.posts | where: "locale", loc  %}
 
 
+<!-- select the 4 most recent posts without considering the sticky post(s) -->
+{% assign len = site_posts | size %}
+{% assign latest_posts = ""  | split: "," %}
+{% assign k = 0 %}
+
+{% for i in (0..len) %}
+    {% if site_posts[i].tags contains "sticky" %}
+    {% elsif k <= 3 %}
+        {% assign latest_posts = latest_posts | push: site_posts[i] %}
+        {% assign k = k | plus: 1 %}
+    {% endif %}
+{% endfor %}
+
+
+
 <!-- Begin post excerpts, let's highlight the first 4 posts on top -->
 <h4 class="font-weight-bold spanborder"><span>{{ strings.latest_posts }}</span></h4>
 <div class="row remove-site-content-margin">
 
     <!-- latest post -->
-    {% assign latest_post = site_posts[0] %}
+    {% assign latest_post = latest_posts[0] %}
     <div class="col-md-6">
         <div class="card border-0 mb-4 box-shadow">
             <a href="{{site.baseurl}}{{latest_post.url}}">
@@ -70,7 +85,7 @@ description: "Melabit home page, based on the free Mundana theme for Jekyll."
 
     <div class="col-md-6">
         <!-- second latest post -->
-        {%- assign second_post = site_posts[1] -%}
+        {%- assign second_post = latest_posts[1] -%}
         <div class="mb-3 d-flex align-items-center">
                 {% if second_post.image %}
                 <div class="col-md-4">
@@ -97,7 +112,7 @@ description: "Melabit home page, based on the free Mundana theme for Jekyll."
             </div>
 
         <!-- third latest post -->
-        {%- assign third_post = site_posts[2] -%}
+        {%- assign third_post = latest_posts[2] -%}
         <div class="mb-3 d-flex align-items-center">
                 {% if third_post.image %}
                 <div class="col-md-4">
@@ -124,7 +139,7 @@ description: "Melabit home page, based on the free Mundana theme for Jekyll."
             </div>
         
         <!-- fourth latest post -->
-        {%- assign fourth_post = site_posts[3] -%}
+        {%- assign fourth_post = latest_posts[3] -%}
         <div class="mb-3 d-flex align-items-center">
                 {% if fourth_post.image %}
                 <div class="col-md-4">
